<resources>
    <string name="app_name">CalcPass</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Welcome to CalcPass!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="eula_header">Welcome to CalcPass!</string>

    <string name="eula_warning">"<b>Warning</b>: CalcPass is security software and has not yet undergone thorough peer review.  Only use this app if you were invited to test it by the developer or a security professional who has reviewed it's source code.

CalcPass is open-source under the GNU General Public License, Version 3 (GPLv3).  <b>This software is provided \"AS IS\", without warranty of any kind, express or implied.</b>

Do you agree to the terms of the GPLv3 license?
"
    </string>

    <string name="eula_agree">I Agree</string>
    <string name="eula_quit">Quit</string>
    <string name="title_activity_eula">License Agreement</string>
    <string name="title_activity_welcome">Welcome to CalcPass!</string>
    <string name="welcome_message1">If you are new to CalcPass take a moment to learn <a href="https://calcpass.com/how-calcpass-works.html">How CalcPass Works</a>.  After you have created a seed tap Import below.</string>
    <string name="welcome_btnImport">Import Seed</string>
    <string name="title_activity_import_seed">Choose Import Method</string>
    <string name="import_fromQR">Scan QR Code</string>
    <string name="import_checkKeystore">Check Keystore Hardware</string>
    <string name="import_typed">Type with Keyboard</string>
    <string name="feature_not_implemented">Sorry, this feature is not yet implemented.</string>
    <string name="title_activity_import_from_keyboard">Import Using Keyboard</string>
    <string name="import_seedname">Seed Name (exactly as it appears on card)</string>
    <string name="import_btnDone">Done</string>
    <string name="title_activity_scan_qr">Scan QR Code</string>
    <string name="import_or">or</string>
    <string name="import_dataPlacholder">Data (spaces optional)</string>
    <string name="title_activity_decryption_password">Decrypt Seed</string>
    <string name="import_decryption_password">Enter decryption password</string>
    <string name="reveal_password">Show Password</string>
    <string name="btn_decrypt">Decrypt</string>

    <string name="decrypt_title">Decrypt \"%1$s\"</string>
    <string name="decrypt_info_seedName">Seed Name: \"%1$s\"</string>
    <string name="decrypt_info_formatVer">Encoding Format: %1$d</string>
    <string name="decrypt_info_encKDFType">Encryption KDF: %1$s</string>
    <string name="decrypt_time">Decryption took %1$dms</string>
    <string name="btnStoreSeed">Store</string>
    <string name="tapToStore">Tap Store to install \"%1$s\" into the Android Keystore on this device. Android will prompt for your screen unlock sequence.</string>
    <string name="importNotice">Your seed is most vulnerable during the import process.  Now would be a good time to verify that there are no malicious Apps on this device.  <a href="https://www.android.com/play-protect/">Google Play Protect</a> can help with that.</string>
    <string name="importNotice2">Switching to another App during the import will abort the import.</string>
    <string name="title_activity_decrypt_success">Ready to Store</string>
    <string name="title_activity_test_key_store">Check Keystore Type</string>
    <string name="test_keystore_msg1">Your CalcPass seed will be imported into the <a href="https://developer.android.com/training/articles/keystore.html">Android Keystore</a>. The Android Keystore is a highly secured area for storing cryptographic keys.  Once stored, Android will ensure that only CalcPass can access this seed, and only when you authorize it to using your screen unlock sequence.</string>
    <string name="test_keystore_msg2">Many Android devices implement a \"Hardware-backed\" Keystore.  Such devices are able to prevent extraction of cryptographic keys even if the Android kernel becomes compromised. If this feature is important to you then you can test for it now.  Android will prompt for your screen unlock sequence.</string>
    <string name="test_keystore_btnCheck">Check Keystore Hardware</string>
    <string name="test_keystore_btnSkip">Skip</string>
    <string name="test_keystore_btnNext">Next</string>

    <string name="KeyStore_unlockTitle">Unlock Seed</string>
    <string name="KeyStore_unlockDescription">Unlock Seed \"%1$s\"</string>
    <string name="KeyStore_keyIDNotExist">\"%1$s\" does not exist in the Keystore</string>
    <string name="lowercase_or">or</string>
    <string name="scan_qr_instructions">Aim camera at your CalcPass QR code.</string>
    <string name="main_listHeader">Select a seed</string>
    <string name="title_activity_site_list">Seed \"%1$s\"</string>
    <string name="sitelist_header">Tap the icon below to calculate a password.</string>

    <string name="list_tap_and_hold">(Tap and hold for more options)</string>
    <string name="title_activity_site_parameters">SiteParametersActivity</string>
    <string name="siteparam_sitename_header">Website Name</string>
    <string name="siteparam_revision_header">Revision</string>
    <string name="siteparam_revision_default">Default</string>
    <string name="siteparam_format_header">Format</string>
    <string name="siteparam_format_default">Default</string>
    <string name="siteparam_type_header">Type</string>
    <string name="siteparam_type_calculated">Calculated</string>
    <string name="siteparam_username_header">User Name</string>
    <string name="siteparam_username_default">Default</string>
    <string name="siteparam_remember_header">Save in List</string>
    <string name="siteparam_remember_desc">Remember this website</string>
    <string name="siteparam_calcbutton_text">Calculate</string>
    <string name="title_activity_edit_website_name">Website Name</string>
    <string name="sitename_prompt">Enter the name of what you\'re signing in to.</string>
    <string name="example_website_name">example.com</string>
    <string name="sitename_btnPaste">Paste</string>
    <string name="tips">Tips:</string>
    <string name="sitename_tip1">\u2022 Paste the full address from your browser. The domain name will be extracted.</string>
    <string name="sitename_tip2">\u2022 A domain name is often best but any text is valid.</string>
    <string name="sitename_tip3">\u2022 Changing even one letter will produce an entirely different password.</string>
    <string name="sitename_tip4">\u2022 Case insensitive.</string>
    <string name="title_activity_select_domain_scope">SelectDomainScopeActivity</string>
    <string name="domainscope_dialog_title">How specific should this password be?</string>
    <string name="domainscope_dialog_recommended">$1s (recommended)</string>
    <string name="siteparam_more_options">More options...</string>
</resources>
